# PARADA-SAT

./: .clangd  CMakeLists.txt  README.md
.cache/clangd/index/: bme280.c.A85FBF266DE84C09.idx  bme280.h.43A71393FA4BCBA5.idx  bme280_defs.h.281067DD2E1B0DC1.idx  common.c.5E3EC2CA657B8C0E.idx  common.h.4BC0AF37E82E976B.idx  config.h.33F5EA4431CF0DBE.idx  errors.h.B8CE98690E2B006C.idx  main.c.76AB35365791F57D.idx  test.c.916FE64AE72C9F1C.idx  test.c.FB5F07CFFBCE81A8.idx
include/: common.h  config.h  errors.h
lib/BME280_SensorAPI/: bme280.c
src/: common.c  main.c
